--- a/new.html
+++ b/new.html
@@ -13,12 +13,12 @@
 	
 		<div class="rightmenu">
 			<ul>
-				<li> Home </li>
-				<li> Blogs</li>
-				<li> History</li>
-				<li> Sponsors</li>
-				<li> About Us</li>
-				<li> Contact Us</li>
+				<li><a href="">Home</a>  </li>
+				<li> <a href="">Blogs</a></li>
+				<li> <a href="">History</a></li>
+				<li> <a href="">Sponsors</a></li>
+				<li> <a href="">About Us</a></li>
+				<li> <a href="">Contact Us</a></li>
 			</ul>
 			
 		
