--- a/index.html
+++ b/index.html
@@ -1,23 +1,42 @@
+<!DOCTYPE html>
 <html>
-	
 <head>
-	<title>My First Website</title>
-<link rel="stylesheet" type="text/css" href="css/styling.css">
-
+	<title>The Begining</title>
+	<link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
-
 <body>
-	<div> LOGO </div>
-	<div class="nav">
-		<ul>
-			<li> <a href="#">Home</li>
-			<li> <a href="#">Blogs</li>
-			<li> <a href="#">History</li>
-			<li> <a href="#">Sponsors</li>
-			<li> <a href="#">About Us</li>
-			<li> <a href="#">Contact Us</li>
-		</ul>
-	</div>			
+<div class="bgimage" style="background-image: url('bird.jpg');">
+	<div class="menu">
+		<div class="leftlogo">
+				<h4>THE NITANGLES</h4>
+		</div>
+	
+		<div class="rightmenu">
+			<ul>
+				<li><a href="">Home</a>  </li>
+				<li> <a href="">Blogs</a></li>
+				<li> <a href="">History</a></li>
+				<li> <a href="">Sponsors</a></li>
+				<li> <a href="">About Us</a></li>
+				<li> <a href="">Contact Us</a></li>
+			</ul>
+			
+		
+		</div>
+		
+		
+	</div>
+		
+	<div class="text">
+		<h3> Travels * Timeline* Search</h3>
+		<h1>THE NIGTANGLE SONGS</h1>
+		<h4>Sing your travel songs in the form of blogs!!</h4>
+		<div class="button">
+			<button id="one">Share</button>
+		<button id="two">Signup</button>
+		</div>
+		
+	</div>
+</div>
 </body>
-
 </html>
